stop vertical responsive menu auto overflow

--- a/stylesheets/vertical-responsive-menu.css
+++ b/stylesheets/vertical-responsive-menu.css
@@ -58,7 +58,7 @@ Vertical Reponsive Menu
   position: absolute;
   top: 20px;
   bottom: 40px;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   width: 100%;
   margin: 0;
   padding: 0;
